docker/k8s/labs/mynginx-pod-emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mynginx
spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    volumeMounts:
      - mountPath: /mymount
        name: mount-volume
  volumes:
  - name: mount-volume
    emptyDir: {}
