docker/k8s/labs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: web_server
  ports:
  - protocol: TCP
    nodePort: 30000
    port: 8080
    targetPort: 80
